Minor css changes to try to prevent <b> from messing with header text alignment.  Issue still persists.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,6 +16,7 @@ header div img {
 }
 
 header div h2 {
+    color: white;
     display: block;
     margin: auto;
     text-align: center;
